# atlas

./: .gitignore  README.md  pyproject.toml
atlas/: api.py  collect.py  collectdeprecated.py  db.py  detect.py  download-and-slice.py  image-collection-pipeline.py  jobengine.py  jobs.py  settings.py  tiles.py
atlas/models/: jobs.py  tile.py
docs/: detection_algorithms.md  superres.md
models/marine-vessel-detection-yolov8/: YOLOv8s_args.yaml
notebooks/: download-and-plot.ipynb  process-tile.ipynb  store-metrics-and-query.ipynb
