[tool.poetry]
name = "atlas"
version = "0.1.0"
description = ""
authors = ["Ben Oxley <ben.oxley@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"
xarray = "^2023.4.2"
rasterio = "^1.3.6"
stackstac = "^0.4.3"
pystac-client = "^0.6.1"
planetary-computer = "^0.5.1"
xarray-spatial = "^0.3.5"
dask = "^2023.4.1"
dask-gateway = "^2023.1.1"
matplotlib = "^3.7.1"
rioxarray = "^0.14.1"
pygeotile = "^1.0.6"
shapely = "^2.0.1"
psycopg2 = "^2.9.8"
ultralytics = "^8.0.191"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
